<resources>

    <string name="app_name">Rijeka 2020</string>
    <string name="desc_rijeka2020">Rijeka 2020</string>
    <string name="desc_flag_cro">Flag of Croatia</string>
    <string name="desc_flag_en">Flag of the United Kingdom</string>
    <string name="msg_press_mic_cro">Pritisnite i držite tipku mikrofona\n za snimanje</string>
    <string name="msg_press_mic_en">Press and hold the mic button\n to begin recording</string>

    <string name="record_status_recording">Recording</string>
    <string name="record_status_file_saved">File saved</string>
    <string name="record_status_short_voice">The voice record is too short</string>

    <string name="no_content">No content</string>
    <string name="mp_title">Media Player</string>
    <string name="mp_filename">File name</string>
    <string name="mp_not_playing">Not playing</string>
    <string name="mp_playing">Playing</string>
    <string name="mp_finished">Finished</string>
    <string name="mp_paused">Paused</string>

    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="a_hour_ago">a hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="a_day_ago">a day ago</string>
    <string name="days_ago">days ago</string>

    <string name="file_status_unopened">unopened</string>
    <string name="file_status_seen">seen</string>
    <string name="file_status_uploaded">uploaded</string>

</resources>
